JDK 1.4 compliance
SVN-Revision: 309